--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "homepage": "https://somuthehunter.github.io/DreamGuys/",
   "name": "dreamguys",
-  "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -10,7 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build"
+    "deploy" : "gh-pages -d dist"
   },
   "dependencies": {
     "framer-motion": "^11.16.0",
